--- a/charts/applications/wiz-outpost-lite/templates/external-secrets.yaml
+++ b/charts/applications/wiz-outpost-lite/templates/external-secrets.yaml
@@ -11,13 +11,32 @@ spec:
       server: "https://vault.vault.svc.cluster.local:8200"
       path: "secret"
       version: "v2"
-      caBundle: ""  # Add if using self-signed certificates
       auth:
         kubernetes:
           mountPath: "kubernetes"
-          role: {{ .Values.vault.role }}
+          role: wiz-outpost-role
           serviceAccountRef:
             name: default
+---
+# Create a secret with the outpostId so the chart can reference it
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: wiz-outpost-lite-config
+  namespace: outpost-lite
+spec:
+  refreshInterval: 1h
+  secretStoreRef:
+    name: vault-secret-store
+    kind: SecretStore
+  target:
+    name: wiz-outpost-config
+    creationPolicy: Owner
+  data:
+    - secretKey: outpostId
+      remoteRef:
+        key: secret/wiz-outpost/credentials
+        property: outpostId
 ---
 # Wiz Outpost credentials from Vault
 apiVersion: external-secrets.io/v1beta1
@@ -26,7 +45,7 @@ metadata:
   name: wiz-outpost-lite-credentials
   namespace: outpost-lite
 spec:
-  refreshInterval: {{ .Values.externalSecrets.refreshInterval }}
+  refreshInterval: 1h
   secretStoreRef:
     name: vault-secret-store
     kind: SecretStore
@@ -54,7 +73,7 @@ metadata:
   name: wiz-outpost-lite-registry
   namespace: outpost-lite
 spec:
-  refreshInterval: {{ .Values.externalSecrets.refreshInterval }}
+  refreshInterval: 1h
   secretStoreRef:
     name: vault-secret-store
     kind: SecretStore
@@ -67,10 +86,10 @@ spec:
         .dockerconfigjson: |
           {
             "auths": {
-              "{{ "{{" }} .server {{ "}}" }}": {
-                "username": "{{ "{{" }} .username {{ "}}" }}",
-                "password": "{{ "{{" }} .password {{ "}}" }}",
-                "auth": "{{ "{{" }} printf "%s:%s" .username .password | b64enc {{ "}}" }}"
+              "{{ .server }}": {
+                "username": "{{ .username }}",
+                "password": "{{ .password }}",
+                "auth": "{{ printf "%s:%s" .username .password | b64enc }}"
               }
             }
           }
