--- a/charts/applications/wiz-outpost-lite/templates/external-secrets.yaml
+++ b/charts/applications/wiz-outpost-lite/templates/external-secrets.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "https://vault.vault.svc.cluster.local:8200"
+      server: "https://vault-production.vault.svc.cluster.local:8200"
       path: "secret"
       version: "v2"
       auth:
@@ -17,26 +17,6 @@ spec:
           role: wiz-outpost-role
           serviceAccountRef:
             name: default
----
-# Create a secret with the outpostId so the chart can reference it
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: wiz-outpost-lite-config
-  namespace: outpost-lite
-spec:
-  refreshInterval: 1h
-  secretStoreRef:
-    name: vault-secret-store
-    kind: SecretStore
-  target:
-    name: wiz-outpost-config
-    creationPolicy: Owner
-  data:
-    - secretKey: outpostId
-      remoteRef:
-        key: secret/wiz-outpost/credentials
-        property: outpostId
 ---
 # Wiz Outpost credentials from Vault
 apiVersion: external-secrets.io/v1beta1
