--- a/charts/applications/wiz-outpost-lite/templates/external-secrets.yaml
+++ b/charts/applications/wiz-outpost-lite/templates/external-secrets.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "https://vault-production.vault.svc.cluster.local:8200"
+      server: "http://vault-production.vault.svc.cluster.local:8200"
       path: "secret"
       version: "v2"
       auth:
