--- a/charts/applications/vault/values/staging.yaml
+++ b/charts/applications/vault/values/staging.yaml
@@ -7,6 +7,7 @@ vault:
   injector:
     enabled: true
     replicas: 1
+    affinity: null
     image:
       repository: hashicorp/vault-k8s
       tag: "1.4.0"  # Stable vault-k8s version (different from Vault server)
