fix(staging): disable vault for restic backup service

--- a/argocd/apps/staging/restic.yaml
+++ b/argocd/apps/staging/restic.yaml
@@ -15,9 +15,14 @@ spec:
       valueFiles:
         - values.yaml
       values: |
-        # Staging-specific values
+        # Staging-specific values - Vault disabled
         vault:
-          secretPath: secret/backup/restic/staging
+          enabled: false
+
+        # Simple file-based backup for staging
+        restic:
+          repository: "file:///tmp/staging-backup"
+          password: "staging-test-password"
 
         backup:
           pvc:
