--- a/charts/applications/restic/templates/cronjob-pvc.yaml
+++ b/charts/applications/restic/templates/cronjob-pvc.yaml
@@ -13,6 +13,7 @@ spec:
       template:
         metadata:
           annotations:
+            {{- if .Values.vault.enabled }}
             vault.hashicorp.com/agent-inject: "true"
             vault.hashicorp.com/role: {{ .Values.vault.role | quote }}
             vault.hashicorp.com/agent-inject-secret-restic-config: {{ .Values.vault.secretPath | quote }}
@@ -23,6 +24,7 @@ spec:
               export AWS_ACCESS_KEY_ID="{{ .Data.data.aws_access_key }}"
               export AWS_SECRET_ACCESS_KEY="{{ .Data.data.aws_secret_key }}"
               {{- end }}`}}
+            {{- end }}
         spec:
           serviceAccountName: {{ include "restic.serviceAccountName" . }}
           restartPolicy: OnFailure
@@ -36,8 +38,14 @@ spec:
                 - |
                   echo "Starting PVC backup job at $(date)"
                   
+                  {{- if .Values.vault.enabled }}
                   # Source Vault configuration
                   source /vault/secrets/restic-config
+                  {{- else }}
+                  # Use direct configuration for staging
+                  export RESTIC_REPOSITORY="{{ .Values.restic.repository }}"
+                  export RESTIC_PASSWORD="{{ .Values.restic.password }}"
+                  {{- end }}
                   
                   # Initialize repository
                   restic init || echo "Repository exists"
@@ -57,7 +65,17 @@ spec:
                 - name: backup-data
                   mountPath: /backup-data
                   readOnly: true
+                {{- if .Values.vault.enabled }}
+                - name: vault-secrets
+                  mountPath: /vault/secrets
+                  readOnly: true
+                {{- end }}
           volumes:
             - name: backup-data
               emptyDir: {}
+            {{- if .Values.vault.enabled }}
+            - name: vault-secrets
+              emptyDir:
+                medium: Memory
+            {{- end }}
 {{- end }}
