--- a/argocd/apps/staging/goldilocks.yaml
+++ b/argocd/apps/staging/goldilocks.yaml
@@ -1,4 +1,3 @@
-# argocd/apps/staging/goldilocks.yaml
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -20,16 +19,20 @@ spec:
         goldilocks:
           dashboard:
             ingress:
+              enabled: true
+              className: nginx
+              annotations:
+                cert-manager.io/cluster-issuer: letsencrypt-production
+                nginx.ingress.kubernetes.io/ssl-redirect: "true"
               hosts:
-              - host: goldilocks-staging.lab1830.com
-                paths:
-                - path: /
-                  pathType: Prefix
+                - host: goldilocks-staging.lab1830.com
+                  paths:
+                    - path: /
+                      type: Prefix  # Changed from pathType to type
               tls:
-              - secretName: goldilocks-staging-tls
-                hosts:
-                - goldilocks-staging.lab1830.com
-            
+                - secretName: goldilocks-staging-tls
+                  hosts:
+                    - goldilocks-staging.lab1830.com
             resources:
               requests:
                 cpu: 15m
@@ -37,7 +40,6 @@ spec:
               limits:
                 cpu: 50m
                 memory: 48Mi
-
           controller:
             resources:
               requests:
@@ -46,7 +48,6 @@ spec:
               limits:
                 cpu: 50m
                 memory: 48Mi
-
           vpa:
             recommender:
               resources:
