feat(goldilocks): use letsencrypt-staging ClusterIssuer for staging environment

--- a/argocd/apps/staging/goldilocks.yaml
+++ b/argocd/apps/staging/goldilocks.yaml
@@ -22,7 +22,7 @@ spec:
               enabled: true
               className: nginx
               annotations:
-                cert-manager.io/cluster-issuer: letsencrypt-production
+                cert-manager.io/cluster-issuer: letsencrypt-staging
                 nginx.ingress.kubernetes.io/ssl-redirect: "true"
               hosts:
                 - host: goldilocks-staging.lab1830.com
