--- a/charts/applications/goldilocks/templates/custom-ingress.yaml
+++ b/charts/applications/goldilocks/templates/custom-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: goldilocks-staging-dashboard-custom
   namespace: goldilocks
   annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-staging
+    cert-manager.io/cluster-issuer: letsencrypt-prod
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   ingressClassName: nginx
