--- a/charts/applications/goldilocks/values.yaml
+++ b/charts/applications/goldilocks/values.yaml
@@ -7,7 +7,7 @@ goldilocks:
       enabled: true
       className: nginx
       annotations:
-        cert-manager.io/cluster-issuer: letsencrypt-staging
+        cert-manager.io/cluster-issuer: letsencrypt-prod
         nginx.ingress.kubernetes.io/ssl-redirect: "true"
       hosts:
         - host: goldilocks.lab1830.com
