--- a/charts/applications/goldilocks/templates/custom-ingress.yaml
+++ b/charts/applications/goldilocks/templates/custom-ingress.yaml
@@ -1,25 +1,42 @@
+# charts/applications/goldilocks/templates/custom-ingress.yaml
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: goldilocks-staging-dashboard-custom
+  name: goldilocks-dashboard-custom
   namespace: goldilocks
   annotations:
+    {{- if eq .Release.Name "goldilocks-staging" }}
+    cert-manager.io/cluster-issuer: letsencrypt-staging
+    {{- else }}
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    {{- end }}
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   ingressClassName: nginx
   tls:
     - hosts:
+        {{- if eq .Release.Name "goldilocks-staging" }}
         - goldilocks-staging.lab1830.com
-      secretName: goldilocks-staging-tls-custom
+        {{- else }}
+        - goldilocks.lab1830.com
+        {{- end }}
+      secretName: goldilocks-tls-custom
   rules:
+    {{- if eq .Release.Name "goldilocks-staging" }}
     - host: goldilocks-staging.lab1830.com
+    {{- else }}
+    - host: goldilocks.lab1830.com
+    {{- end }}
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
+                {{- if eq .Release.Name "goldilocks-staging" }}
                 name: goldilocks-staging-dashboard
+                {{- else }}
+                name: goldilocks-production-dashboard
+                {{- end }}
                 port:
                   name: http
