--- a/argocd/apps/production/velero.yaml
+++ b/argocd/apps/production/velero.yaml
@@ -17,7 +17,7 @@ spec:
         nfsGateway:
           nfs:
             server: "192.168.4.159"
-            path: "/volume1/Backups/velero"
+            path: "/volume1/Backups/production"
           resources:
             requests:
               cpu: "100m"
