--- a/charts/applications/velero/values.yaml
+++ b/charts/applications/velero/values.yaml
@@ -95,7 +95,7 @@ nfsGateway:
     secretKey: "velero123"
   nfs:
     server: "192.168.4.159"
-    path: "/volume1/Backups/velero"
+    path: "/volume1/Backups"
   resources:
     requests:
       cpu: 50m
