fix: add prometheus and loki egress rules for grafana monitoring queries

--- a/charts/infrastructure/network-security/values.yaml
+++ b/charts/infrastructure/network-security/values.yaml
@@ -1,5 +1,4 @@
 # Network Security Configuration
-
 # Global network settings
 global:
   nfsServer: "192.168.4.159"
@@ -64,6 +63,17 @@ networkPolicies:
             ports:
             - protocol: TCP
               port: 2049
+          - to:
+            - podSelector:
+                matchLabels:
+                  app.kubernetes.io/name: prometheus
+            ports:
+            - protocol: TCP
+              port: 9090
+          - to: []
+            ports:
+            - protocol: TCP
+              port: 31000
 
   applications:
     namespace: applications
