fix: add external webhook egress rules for grafana uptime kuma integration

--- a/charts/infrastructure/network-security/values.yaml
+++ b/charts/infrastructure/network-security/values.yaml
@@ -74,6 +74,12 @@ networkPolicies:
             ports:
             - protocol: TCP
               port: 31000
+          - to: []
+            ports:
+            - protocol: TCP
+              port: 443
+            - protocol: TCP
+              port: 80
 
   applications:
     namespace: applications
