--- a/argocd/apps/staging/monitoring.yaml
+++ b/argocd/apps/staging/monitoring.yaml
@@ -13,6 +13,8 @@ spec:
     path: charts/applications/monitoring
     helm:
       values: |
+        grafanaSmtp:
+          enabled: true
         kube-prometheus-stack:
           grafana:
             ingress:
@@ -37,7 +39,20 @@ spec:
               limits:
                 cpu: 200m
                 memory: 256Mi
-
+            smtp:
+              enabled: true
+              host: "smtp.gmail.com:587"
+              skip_verify: false
+              from_name: "Lab1830 Grafana Staging Alerts"
+            extraSecretMounts:
+              - name: smtp-credentials
+                secretName: grafana-smtp-secret
+                defaultMode: 0440
+                mountPath: /etc/secrets/smtp
+                readOnly: true
+            env:
+              GF_SMTP_USER_FILE: "/etc/secrets/smtp/username"
+              GF_SMTP_PASSWORD_FILE: "/etc/secrets/smtp/password"
           prometheus:
             prometheusSpec:
               retention: 7d
@@ -56,7 +71,6 @@ spec:
                     resources:
                       requests:
                         storage: 10Gi
-
           alertmanager:
             alertmanagerSpec:
               resources:
@@ -74,7 +88,6 @@ spec:
                     resources:
                       requests:
                         storage: 2Gi
-
           kubeStateMetrics:
             resources:
               requests:
@@ -83,7 +96,6 @@ spec:
               limits:
                 cpu: 100m
                 memory: 256Mi
-
           nodeExporter:
             resources:
               requests:
