fix: use release namespace in external secret template instead of hardcoded production namespace

--- a/charts/applications/monitoring/templates/grafana-smtp-secret.yaml
+++ b/charts/applications/monitoring/templates/grafana-smtp-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: grafana-smtp-secret
-  namespace: {{ .Values.namespace | default "monitoring-production" }}
+  namespace: {{ .Release.Namespace | default "monitoring-production" }}
 spec:
   refreshInterval: 15s
   secretStoreRef:
