--- a/argocd/apps/staging/monitoring.yaml
+++ b/argocd/apps/staging/monitoring.yaml
@@ -14,7 +14,7 @@ spec:
     helm:
       values: |
         grafanaSmtp:
-          enabled: true
+          enabled: false
         kube-prometheus-stack:
           grafana:
             ingress:
