--- a/charts/applications/monitoring/templates/grafana-smtp-secret.yaml
+++ b/charts/applications/monitoring/templates/grafana-smtp-secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.grafanaSmtp.enabled }}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
@@ -20,3 +21,4 @@ spec:
       remoteRef:
         key: secret/grafana/smtp
         property: password
+{{- end }}
