--- a/argocd/apps/staging/pod-security.yaml
+++ b/argocd/apps/staging/pod-security.yaml
@@ -26,7 +26,7 @@ spec:
         namespaces:
           infrastructure:
             - name: monitoring-staging
-              enforce: baseline
+              enforce: privileged
               audit: baseline
               warn: baseline
             - name: vault-staging
