--- a/charts/applications/monitoring/templates/vault-secretstore.yaml
+++ b/charts/applications/monitoring/templates/vault-secretstore.yaml
@@ -4,13 +4,10 @@ kind: SecretStore
 metadata:
   name: vault-backend
   namespace: {{ .Release.Namespace }}
-  labels:
-    app.kubernetes.io/name: external-secrets
-    app.kubernetes.io/component: secretstore
 spec:
   provider:
     vault:
-      server: "http://vault-production.vault.svc.cluster.local:8200"
+      server: "http://vault-production-active.vault.svc.cluster.local:8200"
       path: "secret"
       version: "v2"
       auth:
