--- a/charts/infrastructure/network-security/values.yaml
+++ b/charts/infrastructure/network-security/values.yaml
@@ -22,6 +22,13 @@ networkPolicies:
             ports:
             - protocol: TCP
               port: 8200
+          - from:
+            - namespaceSelector:
+                matchLabels:
+                  name: monitoring-production
+            ports:
+            - protocol: TCP
+              port: 8200
         egress:
           - to: []
             ports:
@@ -80,6 +87,13 @@ networkPolicies:
               port: 443
             - protocol: TCP
               port: 80
+          - to:
+            - namespaceSelector:
+                matchLabels:
+                  name: vault
+            ports:
+            - protocol: TCP
+              port: 8200
 
   applications:
     namespace: applications
