fix: update secretstore to use external url

--- a/charts/applications/monitoring/templates/vault-secretstore.yaml
+++ b/charts/applications/monitoring/templates/vault-secretstore.yaml
@@ -7,8 +7,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "http://vault-production-active.vault.svc.cluster.local:8200"
-      path: "secret"
+      server: "https://vault.lab1830.com"
       version: "v2"
       auth:
         kubernetes:
